--- a/contracts/cw-code-id-registry/Cargo.toml
+++ b/contracts/cw-code-id-registry/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "cw-code-id-registry"
-version = "0.1.1"
-authors = ["Noah Saso <noahsaso@gmail.com>", "Callum Anderson <callumanderson745@gmail.com>"]
+version = "0.1.0"
+authors = ["bluenote", "Noah Saso <noahsaso@gmail.com>", "Callum Anderson <callumanderson745@gmail.com>"]
 edition = "2018"
 
 exclude = [
